# Config_API

./: README.md  config.py  pyproject.toml
config/exmeple_folder/: new_exemple.json
config_api/: __init__.py
