[tool.poetry]
name = "config-api"
version = "0.1.0"
description = ""
authors = ["VortexRoot"]
readme = "README.md"
packages = [{include = "config_api"}]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
